--- a/.github/workflows/fetch_nasa_apod.yml
+++ b/.github/workflows/fetch_nasa_apod.yml
@@ -3,8 +3,8 @@ name: Fetch NASA APOD (Python)
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 7 * * *" # daily at 07:00 UTC
+  # schedule:
+  #  - cron: "0 7 * * *" # daily at 07:00 UTC
 
 permissions:
   contents: write
